--- a/main.bib
+++ b/main.bib
@@ -3427,3 +3427,5 @@
  @article{Gabor_1946, title={Theory of communication. Part 1: The Analysis of Information}, volume={93}, ISSN={2054-0604}, DOI={10.1049/ji-3-2.1946.0074}, number={26}, journal={Journal of the Institution of Electrical Engineers - Part III: Radio and Communication Engineering}, author={Gabor, D.}, year={1946}, month={Nov}, pages={429–441}, language={en} }
 
  @article{Granlund_1978, title={In Search of a General Picture Processing Operator}, volume={8}, ISSN={0146664X}, DOI={10.1016/0146-664X(78)90047-3}, number={2}, journal={Computer Graphics and Image Processing}, author={Granlund, Goesta H.}, year={1978}, month={Oct}, pages={155–173}, language={en} }
+
+ @article{Miconi_2021, title={Hebbian learning with gradients: Hebbian convolutional neural networks with modern deep learning frameworks}, url={http://arxiv.org/abs/2107.01729}, abstractNote={Deep learning networks generally use non-biological learning methods. By contrast, networks based on more biologically plausible learning, such as Hebbian learning, show comparatively poor performance and difficulties of implementation. Here we show that Hebbian learning in hierarchical, convolutional neural networks can be implemented almost trivially with modern deep learning frameworks, by using specific losses whose gradients produce exactly the desired Hebbian updates. We provide expressions whose gradients exactly implement a plain Hebbian rule (dw ~= xy), Grossberg’s instar rule (dw ~= y(x-w)), and Oja’s rule (dw ~= y(x-yw)). As an application, we build Hebbian convolutional multi-layer networks for object recognition. We observe that higher layers of such networks tend to learn large, simple features (Gabor-like filters and blobs), explaining the previously reported decrease in decoding performance over successive layers. To combat this tendency, we introduce interventions (denser activations with sparse plasticity, pruning of connections between layers) which result in sparser learned features, massively increase performance, and allow information to increase over successive layers. We hypothesize that more advanced techniques (dynamic stimuli, trace learning, feedback connections, etc.), together with the massive computational boost offered by modern deep learning frameworks, could greatly improve the performance and biological relevance of multi-layer Hebbian networks.}, note={arXiv:2107.01729 [cs]}, number={arXiv:2107.01729}, publisher={arXiv}, author={Miconi, Thomas}, year={2021}, month={Nov} }
